--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,9 @@
 {
   "pages": [
-    "pages/index/index"
+    "pages/index/index",
+    "pages/illustrate/illustrate",
+    "pages/share/share",
+    "pages/our/our"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -9,9 +12,36 @@
     "navigationBarTitleText": "多肉识别小助手",
     "navigationBarTextStyle": "black"
   },
+  "tabBar": {
+    "color": "#515151",
+    "selectedColor": "#07c160",
+    "list": [{
+      "pagePath": "pages/index/index",
+      "text": "识别",
+      "iconPath": "images/distinguish1.png",
+      "selectedIconPath": "images/distinguish2.png"
+    },
+    {
+      "pagePath": "pages/illustrate/illustrate",
+      "text": "图鉴",
+      "iconPath": "images/illustrate1.png",
+      "selectedIconPath": "images/illustrate2.png"
+    },
+    {
+      "pagePath": "pages/share/share",
+      "text": "分享",
+      "iconPath": "images/share1.png",
+      "selectedIconPath": "images/share2.png"
+    },
+    {
+      "pagePath": "pages/our/our",
+      "text": "我们",
+      "iconPath": "images/our1.png",
+      "selectedIconPath": "images/our2.png"
+    }]
+  },
   "sitemapLocation": "sitemap.json",
   "usingComponents": {
-    "van-tabbar": "@vant/weapp/tabbar/index",
-    "van-tabbar-item": "@vant/weapp/tabbar-item/index"
+    "van-button": "@vant/weapp/button/index"
   }
 }
