--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
-    "@vant/weapp": "^1.3.0"
+    "@vant/weapp": "^1.3.0",
+    "crypto-js": "^4.0.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {},
   "scripts": {
